--- a/less/widget/commentnew.less
+++ b/less/widget/commentnew.less
@@ -247,11 +247,12 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
                     }
                     img {
                         vertical-align: middle;
-                        width:auto;
-                        height:auto;
+                        width: 90px;
+                        height: 30px;
+
                     }
                     input {
-                        width: 84px;
+                        width: 64px;
                         height:28px;
                         background:#f6f6f6;
                         color:#dcdcdc;
@@ -453,7 +454,8 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             }
             .fr {
                 input {
-                    width: 84px;
+                    //width: 84px;
+                    width: 64px;
                     background: none repeat scroll 0 0 #F6F6F6;
                     border: 1px solid #DCDCDC;
                     border-radius: 2px 2px 2px 2px;
@@ -544,13 +546,14 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     .btn {
         background:#fe992b;
         border-radius:2px;
-        width: 139px;
+        width: 50px;
         height: 31px;
         overflow: hidden;
         color: #fff;
         margin-right: 6px;
         cursor: pointer;
         line-height:28px;
+        overflow:hidden;
         border:0;
     }
 
