--- a/less/widget/commentnew.less
+++ b/less/widget/commentnew.less
@@ -42,6 +42,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
                 background:url("//@{public-url}icon/btn1.png") no-repeat center center;
                 &:hover{
                     background:url("//@{public-url}icon/btn1-0.png") no-repeat center center;
+                    text-decoration: none;
                 }
             }
             &.page-btnr{
@@ -49,6 +50,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
                 background:url("//@{public-url}icon/btn2.png") no-repeat center center;
                 &:hover{
                     background:url("//@{public-url}icon/btn2-0.png") no-repeat center center;
+                    text-decoration: none;
                 }
             }
         }
@@ -74,8 +76,8 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
         li {
             border-bottom: 1px dotted #E1E1E1;
             overflow: hidden;
-            padding-bottom: 10px;
-            padding-top: 10px;
+            padding-bottom: 15px;
+            padding-top: 25px;
         }
         .honey-comment-avatar {
             float: left;
@@ -94,7 +96,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             }
         }
         .honey-comment-body {
-            margin-left: 70px;
+            margin-left: 75px;
             p {
                 margin-bottom: 5px;
             }
