--- a/less/widget/commentnew.less
+++ b/less/widget/commentnew.less
@@ -463,9 +463,11 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
                     border-radius: 2px 2px 2px 2px;
                     color: #DCDCDC;
                     height: 28px;
+                    display: inline-block;
                 }
                 img {
                     vertical-align: middle;
+                    display: inline-block;
                 }
             }
         }
