--- a/css/widget/comment.css
+++ b/css/widget/comment.css
@@ -337,61 +337,77 @@ iframe,
   color: #999;
   margin: 0 10px;
 }
-#honey-comment .honey-comment-text .com-box-til .combox-face {
-  display: block;
+#honey-comment .honey-comment-text .com-box-til .combox-face-main {
+  position: relative;
   float: left;
-  margin-top: 13px;
-  _margin-top: 8px;
-  height: 47px;
-  line-height: 47px;
+  width: 30px;
+  height: 60px;
 }
-#honey-comment .honey-comment-text .com-box-til .combox-face a {
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .all-a {
+  width: 30px;
+  height: 60px;
+  display: block;
+  background: url("//honey.hunantv.com/img/icon/ico-02.png") center center no-repeat;
+}
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .all-a:hover,
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .all-a.on {
+  background: url("//honey.hunantv.com/img/icon/ico-01.png") center center no-repeat;
+}
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face {
+  display: none;
+  position: absolute;
+  top: 45px;
+  left: -10px;
+  padding-top: 7px;
+  width: 251px;
+  height: 54px;
+  line-height: 54px;
+  z-index: 10;
+  background: url("//honey.hunantv.com/img/icon/ico-03.png") 0 0 no-repeat;
+}
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a {
   float: left;
   display: block;
   width: 40px;
   height: 36px;
   margin-left: 10px;
+  margin-top: 10px;
   overflow: hidden;
   background: url("//honey.hunantv.com/img/icon/face.png") no-repeat;
 }
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-1 {
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-1 {
   background-position: 0 0;
 }
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-1:hover,
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-1.on,
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-1.selected {
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-1:hover,
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-1.on {
   background-position: 0 -51px;
 }
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-2 {
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-2 {
   background-position: -50px 0;
 }
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-2:hover,
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-2.on,
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-2.selected {
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-2:hover,
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-2.on {
   background-position: -50px -51px;
 }
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-3 {
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-3 {
   background-position: -99px 0;
 }
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-3:hover,
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-3.on,
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-3.selected {
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-3:hover,
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-3.on {
   background-position: -99px -51px;
 }
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-4 {
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-4 {
   background-position: -148px 0;
 }
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-4:hover,
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-4.on,
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-4.selected {
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-4:hover,
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-4.on {
   background-position: -148px -51px;
 }
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-5 {
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-5 {
   background-position: -197px 0;
 }
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-5:hover,
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-5.on,
-#honey-comment .honey-comment-text .com-box-til .combox-face a.face-5.selected {
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-5:hover,
+#honey-comment .honey-comment-text .com-box-til .combox-face-main .combox-face a.face-5.on {
   background-position: -197px -51px;
 }
 #honey-comment .honey-comment-text .comment-input {
