--- a/less/widget/commentnew.less
+++ b/less/widget/commentnew.less
@@ -109,6 +109,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             .content {
                 color: #545454;
                 font-size: 14px;
+                padding-top: 20px!important;
             }
             .actions {
                 text-align: left;
@@ -306,8 +307,8 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             h5 {
                 font-size: 12px;
                 font-weight: 200;
-                width:320px;
                 float:left;
+                margin-right: 20px;
                 em{
                     color:#ff8400;
                     font-style:normal;
