--- a/less/widget/commentnew.less
+++ b/less/widget/commentnew.less
@@ -71,7 +71,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
     }
 
     ul.honey-comment-list {
-        margin-top: 20px; 
+        margin-top: 10px; 
         padding:0 10px;
         li {
             border-bottom: 1px dotted #E1E1E1;
@@ -114,7 +114,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             .actions {
                 text-align: left;
                 a {
-                    color:#aaa;
+                    color:#ff8400;
                     margin-right:10px;
                     em{
                         color:#ff8400;
@@ -142,6 +142,9 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
                 position: relative;
                 margin-top: 10px;
                 margin-bottom: 10px;
+            }
+            .reply,.origin-content{
+                border-radius:3px;
             }
             .origin-contents {
                 border-color: #dcdcdc;
@@ -178,6 +181,17 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             .origin-content {
                 p {
                     margin: 0;
+                    em{
+                        color:#637792;
+                        display:block;
+                        width:100%;
+                        font-style:normal;
+                        padding-bottom:5px;
+                        a {
+                            color:#637792;
+                            font-weight:normal;
+                        }
+                    }
                 }
                 .arrow {
                     left: 7px;
@@ -582,6 +596,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
         line-height:28px;
         overflow:hidden;
         border:0;
+        _margin-top:2px;
     }
 
     .selected {
