--- a/less/widget/commentnew.less
+++ b/less/widget/commentnew.less
@@ -199,6 +199,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             }
             .reply {
                 padding: 0;
+                margin: 0;
                 table{
                     overflow:hidden;
                 }
@@ -250,7 +251,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
                 }
                 .reply-button {
                     text-align: right;
-                    padding: 5px;
+                    padding: 5px 0;
                     color:#c9c9c9;
                     background:#f1f1f1;
                     line-height:30px;
