--- a/less/widget/commentnew.less
+++ b/less/widget/commentnew.less
@@ -98,7 +98,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
         .honey-comment-body {
             margin-left: 75px;
             p {
-                margin-bottom: 5px;
+                margin-bottom: 3px;
             }
             .top {
                 color: #aaa;
@@ -109,7 +109,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             .content {
                 color: #545454;
                 font-size: 14px;
-                padding-top: 5px!important;
+                //padding-top: 5px!important;
             }
             .actions {
                 text-align: left;
