--- a/less/widget/commentnew.less
+++ b/less/widget/commentnew.less
@@ -413,6 +413,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             border: 1px solid #dfe1e1; 
             margin-top: 5px;
             position: relative;
+            border-radius: 3px 3px 0 0;
             h5, h4 {
                 height: 70px;
                 line-height: 70px;
