--- a/less/widget/commentnew.less
+++ b/less/widget/commentnew.less
@@ -114,14 +114,14 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             .actions {
                 text-align: left;
                 a {
-                    color:#ff8400;
+                    color: #ccc;
                     margin-right:10px;
                     em{
                         color:#ff8400;
                         font-style:normal;
                     }
                     strong {
-                        color: #cc3216;
+                        color:#ff8400;
                         font-weight: 200;
                     }
                 }
@@ -422,6 +422,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             border: 1px solid #dfe1e1; 
             margin-top: 5px;
             border-radius: 3px 3px 0 0;
+            position: relative;
             h5, h4 {
                 height: 70px;
                 line-height: 70px;
