--- a/css/widget/comment.css
+++ b/css/widget/comment.css
@@ -206,6 +206,9 @@ iframe,
   font-size: 12px;
   margin-bottom: 5px;
 }
+#honey-comment ul.honey-comment-list .honey-comment-body .origin-contents span a {
+  color: #ff8400;
+}
 #honey-comment ul.honey-comment-list .honey-comment-body .origin-content p {
   display: block;
 }
@@ -337,6 +340,8 @@ iframe,
 #honey-comment .honey-comment-text .com-box-til {
   height: 60px;
   line-height: 60px;
+  position: relative;
+  z-index: 5;
 }
 #honey-comment .honey-comment-text .com-box-til h5 {
   font-size: 12px;
@@ -438,6 +443,7 @@ iframe,
   margin-top: 5px;
   border-radius: 3px 3px 0 0;
   position: relative;
+  z-index: 4;
 }
 #honey-comment .honey-comment-text .comment-input h5,
 #honey-comment .honey-comment-text .comment-input h4 {
@@ -624,7 +630,7 @@ iframe,
   line-height: 43px;
   position: relative;
   text-align: left;
-  width: 310px;
+  width: 260px;
 }
 #honey-comment .honey-comment-text .actions .fr .btn,
 #honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr .btn {
@@ -636,14 +642,14 @@ iframe,
 #honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr img {
   position: absolute;
   right: 60px;
-  top: 10px;
-  width: 140px;
-  height: 20px;
+  top: 5px;
+  width: 90px;
+  height: 30px;
 }
 #honey-comment .honey-comment-text .actions .fr input,
 #honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr input {
   position: absolute;
-  right: 205px;
+  right: 155px;
   top: 5px;
   width: 54px;
 }
@@ -656,5 +662,5 @@ iframe,
   top: -1px;
 }
 #honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr img {
-  top: 5px;
+  top: 0;
 }
