--- a/less/widget/commentnew.less
+++ b/less/widget/commentnew.less
@@ -182,6 +182,9 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
                     display: block;
                     font-size: 12px;
                     margin-bottom: 5px;
+                    a {
+                        color: #ff8400;
+                    }
                 }
             }
             .origin-content {
@@ -325,6 +328,8 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
         .com-box-til{
             height:60px;
             line-height:60px;
+            position:relative;
+            z-index:5;
             h5 {
                 font-size: 12px;
                 font-weight: 200;
@@ -423,6 +428,7 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
             margin-top: 5px;
             border-radius: 3px 3px 0 0;
             position: relative;
+            z-index:4;
             h5, h4 {
                 height: 70px;
                 line-height: 70px;
@@ -619,10 +625,10 @@ body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fiel
 
 }
 
-#honey-comment .honey-comment-text .actions .fr,#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr{height:43px;line-height:43px; position:relative; text-align:left;width:310px;}
+#honey-comment .honey-comment-text .actions .fr,#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr{height:43px;line-height:43px; position:relative; text-align:left;width:260px;}
 #honey-comment .honey-comment-text .actions .fr .btn,#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr .btn{position:absolute; right:0; top:5px;} 
-#honey-comment .honey-comment-text .actions .fr img,#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr img{position:absolute; right:60px; top:10px; width:140px; height:20px;}
-#honey-comment .honey-comment-text .actions .fr input,#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr input{position:absolute; right:205px; top:5px; width:54px;}
+#honey-comment .honey-comment-text .actions .fr img,#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr img{position:absolute; right:60px; top:5px; width:90px; height:30px;}
+#honey-comment .honey-comment-text .actions .fr input,#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr input{position:absolute; right:155px; top:5px; width:54px;}
 #honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr{height:28px; line-height:28px;}
 #honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr .btn,#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr input{top:-1px;}
-#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr img{top:5px;}
+#honey-comment ul.honey-comment-list .honey-comment-body .reply .reply-button .fr img{top:0;}
