--- a/css/widget/login.dialog.css
+++ b/css/widget/login.dialog.css
@@ -1,52 +1,17 @@
-.cancel-dialog-bt,.alert-bt,.jion-group,.red,.green,.yellow,.tuijian-select{background:url("//honey.hunantv.com/img/sprites/public.png") no-repeat 0 0;}
-.mod-dialog{z-index:200;width:334px;-moz-border-radius:2px;-webkit-border-radius:2px;border-radius:2px;overflow:hidden;}.mod-dialog .black{z-index:-1;width:1999px;height:1999px;filter:alpha(opacity=20);opacity:0.2;left:0;top:0;background-color:#000;}
-.mod-dialog .dialog-wrap{margin:4px;border:1px solid #AFAEAE;background-color:#FFF;}.mod-dialog .dialog-wrap h3{height:30px;line-height:30px;background-color:#F0F0F0;font-size:12px;font-weight:normal;color:#666;}.mod-dialog .dialog-wrap h3 .cancel-dialog-bt{margin:11px 15px 0 0;width:8px;height:7px;background-position:0 -88px;}
-.mod-dialog .dialog-wrap .alert-bt{display:block;width:120px;height:40px;margin:0 auto;margin-bottom:25px;}
-.mod-dialog .dialog-wrap .cancel-del{top:10px;right:60px;}
-.mod-dialog .dialog-wrap .info{padding:15px 12px;}.mod-dialog .dialog-wrap .info .text-input{color:#999;padding:0 10px;width:278px;height:33px;line-height:33px;border:1px solid #DDD;}
-.mod-dialog .dialog-wrap .info textarea{color:#999;padding:10px;width:278px;height:53px;border:1px solid #DDD;}
-.mod-dialog .dialog-wrap .info .cancel-dialog{height:25px;line-height:25px;}
-.mod-dialog .dialog-wrap .info .jion-group{width:78px;height:21px;background-position:0 -41px;}
-.mod-dialog .dialog-wrap .alert{height:80px;}.mod-dialog .dialog-wrap .alert .alert-ico{line-height:80px;padding:5px 0 5px 30px;}
-.mod-dialog .dialog-wrap .alert .red{background-position:-99px -48px;}
-.mod-dialog .dialog-wrap .alert .green{background-position:-99px -78px;}
-.mod-dialog .dialog-wrap .alert .yellow{background-position:-99px -708px;}
-.mod-dialog .dialog-wrap .tuijian{padding:7px 0 20px 14px;border-bottom:1px dashed #E1E1E1;}.mod-dialog .dialog-wrap .tuijian li{display:inline;margin:10px 0 0 10px;float:left;width:178px;height:64px;padding:5px;background:#FAFAFA;border:1px solid #EEE;cursor:pointer;text-align:left;}.mod-dialog .dialog-wrap .tuijian li dl{display:inline;margin:0 5px 0 10px;width:99px;}
-.mod-dialog .dialog-wrap .tuijian li.tuijian-select{background:url("//honey.hunantv.com/i/image/icon/tuijian-ico.png") no-repeat 172px 58px #f1f5e9;border:1px solid #D5E2BE;}
-.mod-dialog .dialog-wrap .tuijian-quxiao{top:10px;right:220px;}
-html{color:#444;background:#F1F1F1;-webkit-text-size-adjust:100%;-moz-text-size-adjust:100%;-ms-text-size-adjust:100%;}
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,button,textarea,p,blockquote,th,td,iframe,.h10,.h20{margin:0;padding:0;}
-table{border-collapse:collapse;border-spacing:0;}
-fieldset,img{border:0;}
-ol,ul{list-style:none;}
-input:focus,textarea:focus,select:focus{outline:none;color:#444 !important;}
-textarea{overflow:auto;resize:none;}
-h1,h2,h3,h4,h5,h6,input,textarea,select,button{font-size:100%;}
-img{display:block;}
-body{font:12px/1.5 'Helvetica Neue',Helvetica,Arial,Sans-serif;}
-a{color:#093D72;text-decoration:none;}a:hover{text-decoration:underline;}
-.clearfix{*zoom:1;}.clearfix:after{visibility:hidden;display:block;font-size:0;content:" ";clear:both;height:0;}
-.hide-text{text-indent:-1000px;overflow:hidden;}
-.fl{float:left;}
-.fr{float:right !important;}
-.pr{position:relative;left:0;top:0;}
-.pa{position:absolute;}
-.hide{display:none;}
-.mt10{margin-top:10px;}
-.ml15{margin-left:15px;}
-.underline{text-decoration:underline !important;}
-.underline:hover{text-decoration:none !important;}
-.h10{height:10px;}
-.mod-dialog .h10{margin:0;padding:0;overflow:hidden;}
-.mod-dialog .honey-login-input{width:290px;margin-bottom:15px;-webkit-border-radius:2px;-moz-border-radius:2px;border-radius:2px;height:27px;padding:3px 6px;font-size:14px;line-height:27px;color:gray;border:1px solid #ddd;-webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);-moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.075);-webkit-transition:border linear .2s, box-shadow linear .2s;-moz-transition:border linear .2s, box-shadow linear .2s;-o-transition:border linear .2s, box-shadow linear .2s;transition:border linear .2s, box-shadow linear .2s;}.mod-dialog .honey-login-input:-moz-placeholder{color:#bfbfbf;}
-.mod-dialog .honey-login-input:-ms-input-placeholder{color:#bfbfbf;}
-.mod-dialog .honey-login-input::-webkit-input-placeholder{color:#bfbfbf;}
-.mod-dialog .honey-login-submit{background:url("//honey.hunantv.com/img/sprites/public.png") no-repeat 0 -120px;width:90px;height:32px;border:0;overflow:hidden;color:#fff;font-weight:200px;line-height:32px;cursor:pointer;}
-.mod-dialog .actions{text-align:left;padding:0 8px;margin:0;position:relative;color:#999;}.mod-dialog .actions .set-cookies{padding:5px 20px;display:inline-block;}.mod-dialog .actions .set-cookies input{margin-right:3px;}
-.mod-dialog .actions .forget-pass{position:absolute;right:0;top:9px;}
-.mod-dialog .actions p{clear:both;margin:0;display:block;border:none;border:0;border-top:1px solid #ddd;margin-top:20px;padding-top:10px;}.mod-dialog .actions p.noborder{border-top:none;margin-top:10px;margin-bottom:10px;}
-.mod-dialog .actions p span{display:block;padding:0;margin:0;margin-bottom:11px;}
-.mod-dialog .actions p a{margin-right:20px;}
-.mod-dialog .actions i{display:inline-block;width:16px;height:16px;overflow:hidden;background:url("//honey.hunantv.com/img/sprites/public.png") no-repeat 0 0;margin-right:5px;}.mod-dialog .actions i.sina{background-position:-62px -237px;}
-.mod-dialog .actions i.qq{background-position:-45px -237px;}
-.mod-dialog .actions i.tqq{background-position:-46px -254px;}
+@charset "utf-8";
+.mod-play-login{width:630px;height:367px;position:relative;background:url("//honey.hunantv.com/hunantv.new/image/login/login-bg1.png") 0 0 repeat-y;margin:0 auto;border:1px solid #d8d8d8;box-shadow:4px 4px 0 rgba(0, 0, 0, 0.3);}.mod-play-login .play-login-close{display:block;width:43px;height:38px;background:url("//honey.hunantv.com/hunantv.new/image/login/close.png") 0 0 no-repeat;box-shadow:4px 4px 0 rgba(0, 0, 0, 0.3);position:absolute;right:-43px;top:-1px;}
+.mod-play-login .con-box{width:590px;padding-left:40px;}.mod-play-login .con-box .cb-l{float:left;width:395px;overflow:hidden;}.mod-play-login .con-box .cb-l p{display:block;width:395px;padding:0 0 25px;height:39px;}.mod-play-login .con-box .cb-l p .txt-int,.mod-play-login .con-box .cb-l p .txt-int1{width:283px;height:37px;line-height:37px;background:url("//honey.hunantv.com/hunantv.new/image/login/ico-8.png") 0 0 no-repeat #f3f3f3;border:1px solid #d8d8d8;color:#b3b3b3;text-indent:48px;float:left;display:inline;}
+.mod-play-login .con-box .cb-l p .txt-int1{background:url("//honey.hunantv.com/hunantv.new/image/login/ico-9.png") 0 0 no-repeat #f3f3f3;}
+.mod-play-login .con-box .cb-l p.login-til{padding:0;height:75px;line-height:75px;font-size:14px;color:#4c4c4c;font-family:"宋体";}.mod-play-login .con-box .cb-l p.login-til em{color:#ff8400;font-family:'Arial';}
+.mod-play-login .con-box .cb-l p.btn{height:30px;overflow:hidden;}.mod-play-login .con-box .cb-l p.btn .btn-login{display:block;float:left;width:82px;height:30px;line-height:30px;color:#fff;text-align:center;margin-right:15px;background:#ff8400;position:relative;}.mod-play-login .con-box .cb-l p.btn .btn-login .loading{background:url("//honey.hunantv.com/hunantv.new/image/global/loading.gif") no-repeat scroll center center transparent;display:none;height:20px;left:50%;margin-left:-10px;position:absolute;top:12px;width:20px;z-index:10;}
+.mod-play-login .con-box .cb-l p.btn .btn-login.bl-loading{background:#e5e5e5;}.mod-play-login .con-box .cb-l p.btn .btn-login.bl-loading .loading{top:6px;display:block;}
+.mod-play-login .con-box .cb-l p.btn label{float:left;width:100px;position:relative;height:30px;line-height:30px;color:#8d8a86;text-indent:20px;}.mod-play-login .con-box .cb-l p.btn label input{position:absolute;left:-3px;top:5px;}
+.mod-play-login .con-box .cb-l p.btn .forget{display:block;width:60px;padding-left:5px;height:30px;line-height:30px;color:#ff8400;float:left;overflow:hidden;}.mod-play-login .con-box .cb-l p.btn .forget:hover{text-decoration:underline;}
+.mod-play-login .con-box .cb-r{float:left;width:121px;padding-left:39px;}.mod-play-login .con-box .cb-r .zc-btn{display:block;width:121px;background:url("//honey.hunantv.com/hunantv.new/image/login/ico-7.png") 103px center no-repeat #ff8400;height:34px;line-height:34px;color:#fff;text-align:center;margin-bottom:10px;}
+.mod-play-login .con-box .cb-r .wb-til{display:block;width:119px;padding-bottom:15px;color:#8d8a86;text-indent:9px;padding-top:55px;text-align:center;}
+.mod-play-login .con-box .cb-r .weibo{display:block;width:110px;margin-left:10px;overflow:hidden;background:url("//honey.hunantv.com/hunantv.new/image/login/share-2.png") 9px 0 no-repeat;}.mod-play-login .con-box .cb-r .weibo a{display:block;width:25px;height:25px;overflow:hidden;text-indent:-999px;margin-left:9px;float:left;}.mod-play-login .con-box .cb-r .weibo a.sina:hover{background:url("//honey.hunantv.com/hunantv.new/image/login/share-2-hover.png") 0 0 no-repeat;}
+.mod-play-login .con-box .cb-r .weibo a.tx:hover{background:url("//honey.hunantv.com/hunantv.new/image/login/share-2-hover.png") -34px 0 no-repeat;}
+.mod-play-login .con-box .cb-r .weibo a.qq:hover{background:url("//honey.hunantv.com/hunantv.new/image/login/share-2-hover.png") -68px 0 no-repeat;}
+.play-login-ts{width:438px;height:198px;background:#fff;}.play-login-ts .play-login-ts-main{padding:0;}.play-login-ts .play-login-ts-main p{display:block;}.play-login-ts .play-login-ts-main p.login-til{height:20px;line-height:20px;font-size:14px;padding:20px 20px 0;color:#4c4c4c;font-family:"宋体";}.play-login-ts .play-login-ts-main p.login-til em{color:#FF8400;font-family:'Arial';}
+.play-login-ts .play-login-ts-main p.login-ts{height:114px;line-height:114px;text-align:center;}
+.play-login-ts .play-login-ts-main p.login-btn{height:45px;}.play-login-ts .play-login-ts-main p.login-btn a{display:block;width:50%;float:left;height:45px;line-height:45px;text-align:center;font-size:18px;color:#fff;background:#ff8400;}.play-login-ts .play-login-ts-main p.login-btn a.btn-1{color:#b5b5b5;background:#e9e9e9;}
