--- a/less/widget/login.dialog.less
+++ b/less/widget/login.dialog.less
@@ -103,7 +103,7 @@
 					}
 					label{
 						float:left;
-						width:100px;
+						//width:100px;
 						position:relative;
 						height:30px;
 						line-height:30px;
@@ -117,7 +117,7 @@
 					}
 					.forget{
 						display:block;
-						width:60px;
+						//width:60px;
 						padding-left:5px;
 						height:30px;
 						line-height:30px;
