login bugs fixed

--- a/less/widget/login.dialog.less
+++ b/less/widget/login.dialog.less
@@ -42,14 +42,24 @@
 				width:395px;
 				padding:0 0 25px;
 				height:39px;
-				.txt-int,.txt-int1{
-					width:283px;
+                .ts-text{
+					diaplay:block;
+					margin-left:10px;
+					text-indent:25px;
+					width:120px;
+					float:left;
 					height:37px;
 					line-height:37px;
+					background:url("//@{base-url}login/ico-6.png") 0 center no-repeat;
+				}
+                .txt-int,.txt-int1{
+					width:205px;
+					padding:9px 0 9px 48px;
+					height:19px;
+					line-height:20px;					
 					background:url("//@{base-url}login/ico-8.png")  0 0 no-repeat #f3f3f3;
 					border:1px solid #d8d8d8;
-					color:#b3b3b3;
-					text-indent: 48px;
+					color:#444;
 					float:left;
 					display:inline;
 				}
@@ -228,4 +238,7 @@
 			}
 		}
 	}
+}
+input:focus, textarea:focus, select:focus{
+	color:#b3b3b3!important;
 }
