--- a/less/widget/login.dialog.less
+++ b/less/widget/login.dialog.less
@@ -73,6 +73,7 @@
 					font-size:14px;
 					color:#4c4c4c;
 					font-family:"宋体";
+                    text-align: left;
 					em{
 						color:#ff8400;
 						font-family:'Arial';
