--- a/css/widget/debug.css
+++ b/css/widget/debug.css
@@ -2,19 +2,8 @@
     background-image:url(about:blank);
     background-attachment:fixed;
 }
-.demos {
-    padding: 20px;
-}
-p {
-    margin: 10px;
-}
-a, a:hover {
-    font-size: 18px;
-    cursor: pointer;
-    font-weight: bold;
-    text-decoration: none;
-}
-#honey_panel {
+/*Honey debug*/
+#hd_panel {
     width: 100%;
     height: 320px;
     padding: 0px;
@@ -26,11 +15,12 @@ a, a:hover {
     overflow: hidden;
     background-color: white;
 }
-#hp_nav {
+/*Honey debug panel*/
+#hdp_nav {
     background-color: black;
     height: 20px;
 }
-#hp_nav a {
+#hdp_nav a {
     display: block;
     color: white;
     font-weight: bolder;
@@ -41,52 +31,49 @@ a, a:hover {
     font-size: 12px;
     padding: 0px 3px;
 }
-#hp_nav a:hover {
+#hdp_nav a:hover {
     background-color: white;
     color: black;
 }
-#hp_list {
+#hdp_list {
     overflow-y: scroll;
     height: 300px;
 }
-.honey_panel_item {
+.hdp_item {
     padding: 5px 20px 5px;
     margin: 0;
     margin-left: -10px;
     border-bottom: 1px solid black;
     font-weight: bolder;
 }
-.hn {
+.hdn {
     color: gray;
     font-weight: normal;
 }
-.hc {
+.hdc {
     padding-right: 200px;
     font-size: 14px;
 }
-.ht {
+.hdt {
     float: right;
     color: gray;
     font-weight: normal;
     font-size: 12px;
 }
-#hp_title {
+#hdp_title {
     float:left;
     color: white;
     margin-left: 10px;
     line-height: 20px;
 }
-.key {
+/*Honey Debug item*/
+.hdi_key {
     font-size: 12px;
     font-weight: normal;
 }
-.notice {
+.hdi_notice {
     color: black;
 }
-.error {
+.hdi_error {
     color: #cc0000;
-}
-.clearfix {
-    overflow:auto;
-    _height:1%
 }
